# valveControl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  daemon.c  daemon.h  logging.c  logging.h  mk  mqttGateway.c  mqttGateway.h  persistState.c  persistState.h  scheduler.c  scheduler.h  valveControl.c  valveControl.h  valvecontrol.cnf
Contrib/: update  valvecontrol  watchdog
Doc/: SystemArchitecture.pptx
valveControl.xcodeproj/: project.pbxproj
valveControl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
valveControl.xcodeproj/xcuserdata/bb.xcuserdatad/xcschemes/: xcschememanagement.plist
